feat: estilização do header parcialmente finalizada

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 .c-header {
-  background-color: #1F1F1F;
+  background: linear-gradient(to bottom, #626262, #1F1F1F);
   width: 100%;
   height: 15rem;
   padding: 1rem;
@@ -18,6 +18,9 @@
 .c-header .c-header__login {
   font-family: "Work Sans", sans-serif;
   font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 .c-header .c-header__login a, .c-header .c-header__login span, .c-header .c-header__login i {
   text-decoration: none;
@@ -29,7 +32,8 @@
 .c-header .c-header__fav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: end;
+  gap: 2rem;
 }
 .c-header .c-header__fav .c-search {
   border-bottom: 1px solid white;
@@ -39,6 +43,7 @@
   border: none;
   background-color: transparent;
   color: #ffffff;
+  font-family: "Work Sans", sans-serif;
 }
 .c-header .c-header__fav .c-search input::placeholder {
   color: #ffffff;
@@ -49,6 +54,7 @@
 }
 .c-header .c-header__fav .c-header__icons {
   display: flex;
+  align-items: center;
   gap: 1.5rem;
   color: #ffffff;
   font-size: 1.5rem;
