--- a/scss/home.scss
+++ b/scss/home.scss
@@ -6,6 +6,7 @@
     img{
         width: 200px;
     }
+    
 
     padding: 0px;
     margin: 0px;
@@ -14,7 +15,7 @@
 }
 
 .c-header{
-    background-color: $background-color;
+    background: linear-gradient(to bottom, #626262, $background-color);
     width: 100%;
     height: 15rem;
     padding: 1rem;
@@ -22,6 +23,9 @@
     .c-header__login{
         font-family: $font-default;
         font-size: 0.9rem;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
         
         a, span, i{
             text-decoration: none;
@@ -37,7 +41,8 @@
     .c-header__fav{
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: end;
+        gap: 2rem;
 
         .c-search{
             border-bottom: 1px solid white;
@@ -47,6 +52,7 @@
                 border: none;
                 background-color: transparent;
                 color: #ffffff;
+                font-family: $font-default;
 
                 &::placeholder{
                     color: #ffffff;
@@ -61,6 +67,7 @@
 
         .c-header__icons{
             display: flex;
+            align-items: center;
             gap: 1.5rem;
             color: #ffffff;
             font-size: 1.5rem;
