--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   text-decoration: none;
 }
 * img {
-  width: 200px;
+  width: 100%;
 }
 
 .c-header {
@@ -14,6 +14,7 @@
   width: 100%;
   height: 15rem;
   padding: 1rem;
+  border-bottom: 1px solid #626262;
 }
 .c-header .c-header__login {
   font-family: "Work Sans", sans-serif;
@@ -28,6 +29,9 @@
 }
 .c-header .c-header__login i {
   font-size: 1.1rem;
+}
+.c-header .c-header__logo img {
+  width: 130px;
 }
 .c-header .c-header__fav {
   display: flex;
@@ -58,6 +62,21 @@
   gap: 1.5rem;
   color: #ffffff;
   font-size: 1.5rem;
+}
+
+.c-nav {
+  width: 100%;
+  background-color: #1F1F1F;
+}
+.c-nav .c-nav__items {
+  width: 100%;
+  flex-wrap: nowrap;
+  overflow-y: auto;
+}
+.c-nav .c-nav__items a {
+  font-family: "Work Sans", sans-serif;
+  font-size: 1.2rem;
+  color: #ffffff;
 }
 
 /*# sourceMappingURL=style.css.map */
