--- a/scss/home.scss
+++ b/scss/home.scss
@@ -4,9 +4,8 @@
 
 *{
     img{
-        width: 200px;
+        width: 100%;
     }
-    
 
     padding: 0px;
     margin: 0px;
@@ -14,11 +13,14 @@
     text-decoration: none;
 }
 
+
+// header
 .c-header{
     background: linear-gradient(to bottom, #626262, $background-color);
     width: 100%;
     height: 15rem;
     padding: 1rem;
+    border-bottom: 1px solid #626262;
 
     .c-header__login{
         font-family: $font-default;
@@ -37,6 +39,11 @@
         }
     }
 
+    .c-header__logo{
+        img{
+            width: 130px;
+        }
+    }
 
     .c-header__fav{
         display: flex;
@@ -71,6 +78,24 @@
             gap: 1.5rem;
             color: #ffffff;
             font-size: 1.5rem;
+        }
+    }
+}
+
+// nav
+.c-nav{
+    width: 100%;
+    background-color: $background-color;
+
+    .c-nav__items{
+        width: 100%;
+        flex-wrap: nowrap;
+        overflow-y: auto;
+
+        a{
+            font-family: $font-default;
+            font-size: 1.2rem;
+            color: #ffffff;
         }
     }
 }
