--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 .c-header {
-  background: linear-gradient(to bottom, #626262, #1F1F1F);
+  background-color: #000;
   width: 100%;
   height: 15rem;
   padding: 1rem;
@@ -31,7 +31,7 @@
   font-size: 1.1rem;
 }
 .c-header .c-header__logo img {
-  width: 130px;
+  width: 200px;
 }
 .c-header .c-header__fav {
   display: flex;
@@ -66,7 +66,7 @@
 
 .c-nav {
   width: 100%;
-  background-color: #1F1F1F;
+  background-color: #000;
 }
 .c-nav .c-nav__items {
   width: 100%;
@@ -77,6 +77,14 @@
   font-family: "Work Sans", sans-serif;
   font-size: 1.2rem;
   color: #ffffff;
+}
+
+.c-main {
+  width: 100%;
+  background-color: #000;
+}
+.c-main .c-main__carousel img {
+  height: 50vh;
 }
 
 /*# sourceMappingURL=style.css.map */
