--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,3 +1,6 @@
 $font-default: 'Work Sans', sans-serif;
 
 $background-color: #000;
+$secondary-background: #434343;
+$secondary-background2: #131313;
+$color-primary: #FFEA00;
