feat: estilização das calcuçadoras parcialmente finalizados

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -47,6 +47,13 @@
     border-bottom: 1px solid $secondary-background;
 }
 
+.calcDesc{
+    font-family: $font-default;
+    text-align: center;
+    font-size: 1rem;
+    color: #ffffff;
+}
+
 // header
 .c-header{
     background-color: $background-color;
@@ -201,4 +208,59 @@
 
 
     }
+
+    .c-main__calc{
+        width: 100%;
+
+        .c-calc__cards{
+            display: grid;
+            gap: 0.8rem;
+            grid-template-columns: 1fr 1fr;
+            grid-template-areas: 
+                "calc1 calc2"
+                "calc3 calc3"
+            ;
+
+            .c-calc__items{
+                max-width: 12rem;
+                height: 15rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin: auto;
+                
+                a{
+                    text-decoration: none;
+                }
+
+                .calc-img{
+                    width: 150px;
+                    height: 150px;
+                    border-radius: 50%;
+                    margin: auto;
+                    background-color: $secondary-background;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    
+                    img{
+                        width: 100px;
+                    }
+                }
+            }
+
+            .calc-1{
+                grid-column: calc1;
+            }
+
+            .calc-2{
+                grid-column: calc2;
+            }
+
+            .calc-3{
+                grid-column: calc3;
+            }
+        }
+    }
 }
+
