--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,13 @@
   border-bottom: 1px solid #434343;
 }
 
+.calcDesc {
+  font-family: "Work Sans", sans-serif;
+  text-align: center;
+  font-size: 1rem;
+  color: #ffffff;
+}
+
 .c-header {
   background-color: #000;
   width: 100%;
@@ -165,6 +172,48 @@
 }
 .c-main .c-main__catalog .c-catalog-items .c-catalog__more .card-more i {
   font-size: 3.5rem;
+}
+.c-main .c-main__calc {
+  width: 100%;
+}
+.c-main .c-main__calc .c-calc__cards {
+  display: grid;
+  gap: 0.8rem;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "calc1 calc2" "calc3 calc3";
+}
+.c-main .c-main__calc .c-calc__cards .c-calc__items {
+  max-width: 12rem;
+  height: 15rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+.c-main .c-main__calc .c-calc__cards .c-calc__items a {
+  text-decoration: none;
+}
+.c-main .c-main__calc .c-calc__cards .c-calc__items .calc-img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: auto;
+  background-color: #434343;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.c-main .c-main__calc .c-calc__cards .c-calc__items .calc-img img {
+  width: 100px;
+}
+.c-main .c-main__calc .c-calc__cards .calc-1 {
+  grid-column: calc1;
+}
+.c-main .c-main__calc .c-calc__cards .calc-2 {
+  grid-column: calc2;
+}
+.c-main .c-main__calc .c-calc__cards .calc-3 {
+  grid-column: calc3;
 }
 
 /*# sourceMappingURL=style.css.map */
