--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 body {
   width: 100%;
   height: 100vh;
+  background-color: #000;
 }
 
 .productDescr {
@@ -112,6 +113,7 @@ body {
 .c-nav {
   width: 100%;
   background-color: #000;
+  border-bottom: 1px solid #434343;
 }
 .c-nav .c-nav__items {
   width: 100%;
@@ -152,7 +154,8 @@ body {
   border: none;
   background-color: #131313;
 }
-.c-main .c-main__catalog .c-catalog-items .c-catalog__card .img-card {
+.c-main .c-main__catalog .c-catalog-items .c-catalog__card .imgDiv {
+  height: 15rem;
   background-color: #434343;
 }
 .c-main .c-main__catalog .c-catalog-items .c-catalog__card .card-infos {
@@ -163,7 +166,7 @@ body {
 }
 .c-main .c-main__catalog .c-catalog-items .c-catalog__more {
   width: 100%;
-  max-width: 12rem;
+  max-width: 11rem;
   margin: auto;
   height: 25rem;
   background-color: #131313;
@@ -180,7 +183,6 @@ body {
 }
 .c-main .c-main__calc {
   width: 100%;
-  border-bottom: 1px solid #434343;
 }
 .c-main .c-main__calc .c-calc__cards {
   display: grid;
@@ -225,6 +227,8 @@ body {
 .c-footer {
   width: 100%;
   background-color: #000;
+  margin: auto;
+  border-top: 1px solid #434343;
 }
 .c-footer .c-footer__kn {
   padding-top: 2rem;
@@ -245,27 +249,31 @@ body {
   color: white;
   font-size: 2rem;
 }
-.c-footer .c-footer__dev {
+.c-footer .c-footer__devCont {
+  display: flex;
+  flex-direction: column;
+}
+.c-footer .c-footer__devCont .c-footer__dev {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.c-footer .c-footer__dev p {
+.c-footer .c-footer__devCont .c-footer__dev p {
   color: #ffffff;
   font-family: "Work Sans", sans-serif;
   text-align: center;
   font-size: 1rem;
   font-weight: 100;
 }
-.c-footer .c-footer__dev .c-dev__icons {
+.c-footer .c-footer__devCont .c-footer__dev .c-dev__icons {
   display: flex;
   gap: 1rem;
 }
-.c-footer .c-footer__dev .c-dev__icons i {
+.c-footer .c-footer__devCont .c-footer__dev .c-dev__icons i {
   color: white;
   font-size: 1.5rem;
 }
-.c-footer .c-footer__contact {
+.c-footer .c-footer__devCont .c-footer__contact {
   color: #ffffff;
   display: flex;
   align-items: center;
@@ -279,9 +287,34 @@ body {
   font-weight: 100;
   text-align: center;
   background-color: #131313;
+  margin-top: 10px;
 }
 .c-footer .c-footer__rights p {
   padding: 10px;
+}
+
+@media (min-width: 750px) {
+  .c-main .c-main__catalog .c-catalog-items {
+    display: flex;
+    gap: 0.8rem;
+  }
+  .c-main .c-main__calc .c-calc__cards {
+    display: flex;
+    gap: 0.8rem;
+    align-items: center;
+    justify-content: center;
+  }
+  .c-footer .c-footer__devCont {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+@media (min-width: 900px) {
+  .c-main {
+    max-width: 900px;
+    margin: auto;
+    border: 1px solid #434343;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
