--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,9 @@ body {
   text-decoration: none;
   color: #ffffff;
 }
+.c-header .c-header__login a:hover {
+  color: #FFEA00;
+}
 .c-header .c-header__login i {
   font-size: 1.1rem;
 }
@@ -102,12 +105,19 @@ body {
   border: none;
   color: #ffffff;
 }
+.c-header .c-header__fav .c-search button:hover {
+  background-color: #FFEA00;
+  color: #000;
+}
 .c-header .c-header__fav .c-header__icons {
   display: flex;
   align-items: center;
   gap: 1.5rem;
   color: #ffffff;
   font-size: 1.5rem;
+}
+.c-header .c-header__fav .c-header__icons i:hover {
+  color: #FFEA00;
 }
 
 .c-nav {
@@ -124,6 +134,9 @@ body {
   font-family: "Work Sans", sans-serif;
   font-size: 1.2rem;
   color: #ffffff;
+}
+.c-nav .c-nav__items a:hover {
+  color: #FFEA00;
 }
 
 .c-main {
@@ -145,6 +158,7 @@ body {
   grid-template-columns: 1fr 1fr;
   gap: 0.8rem;
   cursor: pointer;
+  border-radius: 5px;
 }
 .c-main .c-main__catalog .c-catalog-items .c-catalog__card {
   max-width: 12rem;
@@ -158,12 +172,17 @@ body {
 .c-main .c-main__catalog .c-catalog-items .c-catalog__card .imgDiv {
   height: 15rem;
   background-color: #434343;
+  border-radius: 5px;
 }
 .c-main .c-main__catalog .c-catalog-items .c-catalog__card .card-infos {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+}
+.c-main .c-main__catalog .c-catalog-items .c-catalog__card:hover {
+  transform: scale(1.2);
+  transition: 0.5s;
 }
 .c-main .c-main__catalog .c-catalog-items .c-catalog__more {
   width: 100%;
@@ -181,6 +200,10 @@ body {
 }
 .c-main .c-main__catalog .c-catalog-items .c-catalog__more .card-more i {
   font-size: 3.5rem;
+}
+.c-main .c-main__catalog .c-catalog-items .c-catalog__more:hover {
+  transform: scale(1.2);
+  transition: 0.5s;
 }
 .c-main .c-main__calc {
   width: 100%;
@@ -214,6 +237,10 @@ body {
 }
 .c-main .c-main__calc .c-calc__cards .c-calc__items .calc-img img {
   width: 100px;
+}
+.c-main .c-main__calc .c-calc__cards .c-calc__items:hover {
+  transform: scale(1.2);
+  transition: 0.5s;
 }
 .c-main .c-main__calc .c-calc__cards .calc-1 {
   grid-column: calc1;
@@ -250,6 +277,9 @@ body {
   color: white;
   font-size: 2rem;
 }
+.c-footer .c-footer__kn .c-kn__icons i:hover {
+  color: #FFEA00;
+}
 .c-footer .c-footer__devCont {
   display: flex;
   flex-direction: column;
@@ -274,12 +304,21 @@ body {
   color: white;
   font-size: 1.5rem;
 }
+.c-footer .c-footer__devCont .c-footer__dev .c-dev__icons i:hover {
+  color: #FFEA00;
+}
 .c-footer .c-footer__devCont .c-footer__contact {
   color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 3rem;
+}
+.c-footer .c-footer__devCont .c-footer__contact p {
+  cursor: pointer;
+}
+.c-footer .c-footer__devCont .c-footer__contact p:hover {
+  color: #FFEA00;
 }
 .c-footer .c-footer__rights {
   color: #ffffff;
