feat: Modais de Login e Cadastro finalizados

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,14 @@ body {
   color: #ffffff;
 }
 
+.buttons {
+  color: #ffffff;
+}
+.buttons:hover {
+  background-color: #FFEA00;
+  color: #000;
+}
+
 .c-header {
   background-color: #000;
   width: 100%;
@@ -79,6 +87,10 @@ body {
 .c-header .c-header__login i {
   font-size: 1.1rem;
 }
+.c-header .c-header__login .c-modal .buttonSubmit {
+  background-color: #FFEA00;
+  border: 1px solid #000;
+}
 .c-header .c-header__logo img {
   width: 200px;
 }
@@ -100,14 +112,6 @@ body {
 }
 .c-header .c-header__fav .c-search input::placeholder {
   color: #434343;
-}
-.c-header .c-header__fav .c-search button {
-  border: none;
-  color: #ffffff;
-}
-.c-header .c-header__fav .c-search button:hover {
-  background-color: #FFEA00;
-  color: #000;
 }
 .c-header .c-header__fav .c-header__icons {
   display: flex;
