feat: Efeito parallax finalizado

--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,14 @@ body {
   transform: scale(1.2);
   transition: 0.5s;
 }
+.c-main .c-main__paralaxe {
+  width: 100%;
+  height: 50vh;
+  background-image: url(../images/7.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 .c-main .c-main__calc {
   width: 100%;
 }
